Update archive.html to support url correction from http to https (#1263)
* Update archive.html to correct http to https

* Temporary placeholder removed

* Updated archive.html

* Refactor code to be more legible

Refactor extractKey() to make it more legible.

Co-authored-by: Jeffrey Warren <jeff@unterbahn.com>

--- a/examples/archive.html
+++ b/examples/archive.html
@@ -112,8 +112,14 @@
         getUrl = `https://archive.org/details/${input.value}/`;
         showImages(getUrl); 
       }
-      else if(!input.value.includes('https://')) {
+      else if(!input.value.includes('https://') && !input.value.includes('http://') && input.value.includes('archive.org/details/')) {
         getUrl = `https://${input.value}`;
+        showImages(getUrl);   
+      }
+      else if(input.value.includes('http://')) {
+        getUrl = input.value.replace('http:', 'https:');
+        input.value = getUrl;
+        console.log('input', input.value);
         showImages(getUrl);   
       }
       else
